css/main.css
---
---
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

/* MAIN */

main {
  max-width: 60em;
}

html {
  font-family: 'Source Sans Pro', sans-serif;
  font-family: 'Slabo 27px', serif;
}

th {
  vertical-align: bottom; /* or middle, top */
}

a {
  text-decoration: none;
  color: #000;
  text-align: center;
}

/* TYPE */

.fa {
  padding: 5px;
  vertical-align: middle;
}

.fa-purp {
  color: #8bc53f;
}

.fa-purp:hover {
  color: #545b98;
}

.label {
  font-size: 0;
}

.center {
  text-align: center;
}

master

p {
  max-width: 30em;
}

h1, h2, h3, h4, h5, h6, nav, label {
  font-family: 'Slabo 27px', serif;
  color: #545b98;
}

p, table, ul, ol, dl, input, textarea {
  font-family: 'Source Sans Pro', sans-serif;
}

/* NAVIGATION */

.nav {
  vertical-align: middle;
}

.hidden-mob {
  display: none;
}

.hidden-desk {
  padding: 20px;
  max-width: 100px;
}

.sidenav {
  height: 100%;
  width: 100px;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #6f9ec3;
  overflow-x: hidden;
  padding-top: 20px;
  vertical-align: middle;
}

.sidenav a {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  color: #fff;
  display: block;
  vertical-align: middle;
}

.sidenav a:hover {
  color: #b0ecee;
}

main {
  margin-left: 100px; /* Same as the width of the sidenav */
  font-size: 28px; /* Increased text to enable scrolling */
  padding: 0px 10px;
}

.contact {
  padding: 0;
  margin: 0;
  margin-left: 10px;
  margin-right: 10px;
  color: #b0ecee;
}

.address {
  position: absolute;
  bottom: 0;
  padding-bottom: 20px;
}


/* CREATE NEW */

input[type=text], select, textarea {
  width: 90%;
  padding-left: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
  vertical-align: center;
}

input[type=date], select, textarea {
  width: 90%;
  padding-left: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

input[type=submit] {
  background-color: #8bc53f;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  width: 20%;
  vertical-align: center;
}

input[type=submit]:hover {
  background-color: #545b98;
}

.container {
  border-radius: 5px;
  padding: 20px;
}

.add-photo {
  padding: 75px;
}

.marg-top {
  margin-top: 75px;
  margin-bottom: 0;
}

.temp-img {
  box-shadow: 10px 10px 5px #e5e5e5;
  margin-bottom: 15px;
}

.skinny {
  max-width: 80%;
  vertical-align: middle;
  margin: 0 auto;
  text-align: center;
}

/* ONGOING */

.list-img {
  border-radius: 100%;
  max-width: 50%;
  text-align: right;
  padding: 10px;
}

.marg-0 {
  margin-top: 0;
  margin-bottom: 0;
}

.list-box {
  background-color: #efefef;
  padding: 10px;
  border-radius: 8px;
}

.btn-fin {
  background-color: #8bc53f;
  padding: 15px;
  border-radius: 8px;
  margin-bottom: 160px;
  text-align: right;
  font-size: initial;
}

.btn-fin:hover {
  background-color: #545b98;
}

/* CREATE NEW */

input[type=text], select, textarea {
  width: 90%;
  padding-left: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
  vertical-align: center;
}

input[type=date], select, textarea {
  width: 90%;
  padding-left: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

input[type=submit] {
  background-color: #8bc53f;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  width: 20%;
  vertical-align: center;
}

input[type=submit]:hover {
  background-color: #545b98;
}

.container {
  border-radius: 5px;
  padding: 20px;
}

.add-photo {
  padding: 75px;
}

.marg-top {
  margin-top: 75px;
  margin-bottom: 0;
}

.temp-img {
  box-shadow: 10px 10px 5px #e5e5e5;
  margin-bottom: 10px;
}

/* CALENDAR */

.calender, th, td {
  border: 1px solid #ccc;
}

tbody td {
  height: 10em;
}

.border-none {
  border: 0;
}

.event {
  background-color: #f2f2f2;
}

.border {
  border-color: #ccc;
  border-bottom-color: #ccc;
  border-top-color: #ccc;
}

table {
  border-collapse: collapse;
}

.pink {
  background-color: #f2bcbc;
  border: 1px solid #b92828;
  color: #991919;
  border-radius: 8px;
}

.grey {
  background-color: #9dcae0;
  color: white;
  border-radius: 8px;
  padding: .25em;
}

.purple {
  background-color: #d2d6f0;
  border: 1px solid #1d38da;
  color: #38448e;
  border-radius: 8px;
}

.green {
  background-color: #d1e0bf;
  border: 1px solid #6b7e54;
  color: #51603f;
  border-radius: 8px;
}

@media only screen and (min-width: 608px) {

  .sidenav {
    padding-top: 15px;
  }

  a {
    text-align: left;
  }

  .sidenav {
    height: 100%;
    width: 160px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #6f9ec3;
    overflow-x: hidden;
    padding-top: 20px;
  }

  .sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    color: #fff;
    display: block;
  }

  .sidenav a:hover {
    color: #b0ecee;
  }

  main {
    margin-left: 170px; /* Same as the width of the sidenav */
    font-size: 28px; /* Increased text to enable scrolling */
    padding: 0px 10px;
  }
  .sidenav a {
    font-size: 18px;
  }

  .hidden-mob {
    display: block;
  }

  .hidden-desk {
    display: none;
  }

  .label {
    font-size: initial;
  }

}

body {
  margin: 100px auto;
  background-color: white;
  font-family: 'Kanit', sans-serif;
}

.calendar-base {
  width: 1125px;
  height: 615px;
  border-radius: 20px;
  background-color: #d0eaf7;
  position: relative;
  z-index: -1;
  color: black;
}

.year {
  color: #6f9ec3;
  font-size: 30px;
  float: right;
  position: relative;
  right: 75px;
  top: 20px;
  font-weight: bold;
}

.triangle-left {
  width: 0;
  height: 0;
  border-top: 5px solid transparent;
  border-right: 10px solid #6f9ec3;
  border-bottom: 5px solid transparent;
  float: right;
  position: relative;
  right: 90px;
  top: 36px;
}

.triangle-right {
  width: 0;
  height: 0;
  border-top: 5px solid transparent;
  border-left: 10px solid #6f9ec3;
  border-bottom: 5px solid transparent;
  float: right;
  position: relative;
  left: 20px;
  top: 36px;
}
.triangle-left:hover{
  border-right: 10px solid#2ECC71;
}
.triangle-right:hover{
  border-left: 10px solid#2ECC71;
}

.month-color {
  color: #6f9ec3;
}
.month-hover:hover{
  color: white !important;
}

.months {
  color: grey;
  position: relative;
  left: 330px;
  top: 90px;
  word-spacing: 10px;
}

.month-line {
  border-color: #E8E8E8;
  position: relative;
  top: 91px;
  width: 84%;
  left: 178px;
}

.days {
  color: black;
  position: relative;
  font-size: 24px;
  left: 400px;
  top: 90px;
  word-spacing: 40px;
  font-weight: 600;
}

.num-dates {
  float: right;
  position: relative;
  top: 110px;
  right: 115px;
  z-index: 1;
}

.first-week {
  margin-bottom: 25px;
  word-spacing: 55px;
}

.second-week {
  margin-bottom: 25px;
  word-spacing: 55px;
}

.third-week {
  margin-bottom: 25px;
  word-spacing: 55px;
}

.fourth-week {
  margin-bottom: 25px;
  word-spacing: 55px;
}

.fifth-week {
  margin-bottom: 25px;
  word-spacing: 55px;
}

.sixth-week {
  margin-bottom: 25px;
  word-spacing: 55px;
}

.active-day {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  background-color: #2ECC71;
  position: relative;
  top: 295px;
  left: 661px;
}

.white {
  color: white;
}

.event-indicator {
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background-color: #2980B9;
  position: relative;
  top: 304px;
  left: 695px;
}

.two {
  position: relative;
  top: 168px;
  left: 535px;
}

.calendar-left {
  width: 300px;
  height: 615px;
  border-radius: 20px 0px 0px 20px;
  background-color: #9dcae0;
  position: relative;
  z-index: -1;
  bottom: 615px;
  color: white;
}

.hamburger {
  position: relative;
  top: 25px;
  left: 25px;
}

.burger-line:hover, .hamburger:hover{
  background-color:#27e879 !important;
}

.burger-line {
  width: 25px;
  height: 3px;
  background-color: white;
  border-radius: 15%;
  margin-bottom: 3px;
}

.num-date {
  font-size: 150px;
  width: 50%;
  margin: 0 auto;
  font-weight: 700;
}

.day {
  width: 50%;
  margin: 0px auto;
  font-size: 30px;
  position: relative;
  bottom: 51px;
}

.current-events {
  font-size: 15px;
  position: relative;
  margin-left: 15px;
  bottom: 12px;
}

.posts {
  text-decoration: underline dotted;
}
.posts:hover{
  color:#27e879 !important;
}

.create-event {
  font-size: 18px;
  position: relative;
  margin-top: 30px;
  margin-left: 73px;
}

.event-line {
  width: 90%;
}

.add-event {
  width: 20px;
  height: 20px;
  padding: 0px;
  border-radius: 50%;
  border: solid white 2px;
  position: relative;
  bottom: 42px;
  left: 260px;
}

.add {
  font-size: 25px;
  position: relative;
  left: 4px;
  bottom: 10px;
}

.add:hover, .create-event:hover, .add-event:hover{
  color:#27e879 !important;
  border-color: #27e879 !important;
}

button {
  color: black;
  background-color: white;
}

